--- a/web_flask/templates/100-hbnb.html
+++ b/web_flask/templates/100-hbnb.html
@@ -1,78 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../static/styles/4-common.css">
-    <link rel="stylesheet" type="text/css" href="../static/styles/3-header.css">
-    <link rel="stylesheet" type="text/css" href="../static/styles/3-footer.css">
-    <link rel="stylesheet" type="text/css" href="../static/styles/6-filters.css">
-    <link type="text/css" rel="stylesheet" href="../static/styles/8-places.css">
-    <link rel="icon" href="../static/images/icon.png" />
-    <title>HBnB</title>
-  </head>
-  <body>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-footer.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/3-header.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/4-common.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/6-filters.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/8-places.css') }}">
+    <title>AirBnB_clone</title>
+</head>
+<body>
     <header>
-      <div class="logo"></div>
+        <div>
+            <div class="logo"></div>
+        </div>
     </header>
     <div class="container">
-      <section class="filters">
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>&nbsp;</h4>
-	  <div class="popover">
-	    <ul>
-	      {% for state in states %}
-	      <li>
-		<h2>{{ state[0].name }}:</h2>
-		<ul>
-		  {% for city in state[1] %}
-		  <li>{{ city.name }}</li>
-		  {% endfor %}
-		</ul>
-	      </li>
-	      {% endfor %}
-	    </ul>
-	  </div>
-	</div>
-	<div class="amenities">
-	  <h3>Amenities</h3>
-	  <h4>&nbsp;</h4>
-	  <div class="popover">
-	    <ul>
-	      {% for amenity in amenities %}
-	      <li>{{ amenity.name }}</li>
-	      {% endfor %}
-	    </ul>
-	  </div>
-	</div>
-	<button type="button">Search</button>
-      </section>
-      <div class="placesh1"><h1>Places</h1></div>
-      <section class="places">
-	<!-- <h1>Places</h1> -->
-	{% for place in places %}
-	<article>
-	  <div class="title_box">
-	    <h2>{{ place.name }}</h2>
-	    <div class="price_by_night">${{ place.price_by_night }}</div>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">{{ place.max_guest }} Guest{% if place.max_guest != 1 %}s{% endif %}</div>
-            <div class="number_rooms">{{ place.number_rooms }} Bedroom{% if place.number_rooms != 1 %}s{% endif %}</div>
-            <div class="number_bathrooms">{{ place.number_bathrooms }} Bathroom{% if place.number_bathrooms != 1 %}s{% endif %}</div>
-	  </div>
-	  <div class="user">
-            <b>Owner:</b> {{ place.user.first_name }} {{ place.user.last_name }}
-          </div>
-          <div class="description">
-	    {{ place.description | safe }}
-          </div>
-	</article>
-	{% endfor %}
-      </section>
-    </div>
-    <footer>
-      <p>Holberton School</p>
-    </footer>
-  </body>
+        <section class="filters">
+            <div class="locations">
+                <h3>State</h3>
+                <ul class="popover">
+                    {% for state in states|sort(attribute='name') %}
+                        <li><h2>{{ state.name }}</h2>
+                          <ul>
+                                {% for city in state.cities|sort(attribute='name') %}
+                                        <li><p>{{ city.name }}</p></li>
+                                {% endfor %}
+                          </ul>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="amenities">
+                <h3>Amenities</h3>
+                <ul class="popover">
+                    {% for amenity in amenities|sort(attribute='name') %}
+                        <lI>{{ amenity.name }}</LI>
+                    {% endfor %}
+                </ul>
+            </div>
+            <button>Search</button>
+        </section>
+        <section class="places">
+            <h1>Places</h1>
+            <article>
+                <h2>My home</h2>
+                <div class="price_by_night"><p>$80</p></div>
+                <div class="information">
+                    <div class="max_guest"><p>2 Guests</p></div>
+                    <div class="number_rooms"><p>1 bedroom</p></div>
+                    <div class="number_bathrooms"><p>1 Bathroom</p></div>
+                </div>
+                <div class="user"><b>Owner:</b> Marinette Dupain-Cheng</div>
+                <div class="description">
+                    <p>
+                        This is a lovely 1 bedroom and 1 Bathroom
+                        apartment that can accommodate 2 people.
+                        It locates at the center of Shanghai and
+                        next to subway line 1, stop to People Square,
+                        2 stops to Bund, 3 stops to Jingan Temple.
+                    </p>
+                </div>
+            </article>
+            <article>
+                    <h2>Tiny home</h2>
+                    <div class="price_by_night"><p>$65</p></div>
+                    <div class="information">
+                        <div class="max_guest"><p>4 Guests</p></div>
+                        <div class="number_rooms"><p>2 bedrooms</p></div>
+                        <div class="number_bathrooms"><p>1 Bathroom</p></div>
+                    </div>
+                    <div class="user"><b>Owner:</b> Adrien Agreste</div>
+                    <div class="description">
+                        <p>
+                            Enjoy the simplicity of this quiet and central
+                            accommodation. Located on the second floor,
+                            in the historic center 500 meters from the
+                            Plaza de Armas, walking they arrive in 6
+                            minutes, it has two double beds, two
+                            bedrooms, a bathroom, a completely independent
+                            kitchen-dining room environment.
+                        </p>
+                    </div>
+                </article>
+                <article>
+                    <h2>A suite</h2>
+                    <div class="price_by_night"><p>$180</p></div>
+                    <div class="information">
+                        <div class="max_guest"><p>6 Guests</p></div>
+                        <div class="number_rooms"><p>3 bedrooms</p></div>
+                        <div class="number_bathrooms"><p>3 Bathrooms</p></div>
+                    </div>
+                    <div class="user"><b>Owner:</b> Marinette Dupain-Cheng</div>
+                    <div class="description">
+                        <p>
+                            Castel Saba is located in Spain, on the
+                            Costa Blanca, slightly south of Alicante.
+                            The place is very quiet, close to the sea
+                            and the countryside. The property is surrounded
+                            by a pine forest: the house dominates cultures
+                            of fruit trees, especially oranges and
+                            lemons and also the natural reserve of the
+                            region, the Rio Seco.
+                        </p>
+                    </div>
+                </article>
+            </section>
+        </div>
+        <footer>
+            <p>Best School</p>
+        </footer>
+    </body>
 </html>
